--- a/theme/templates/footer.html
+++ b/theme/templates/footer.html
@@ -8,6 +8,8 @@
                 <ul>
                     <li><a href="https://www.linkedin.com/in/{{ LINKEDIN_USERNAME }}" target="_blank" class="about-body-link" link="my-linkedin-profile"><img src="{{ SITEURL }}/theme/images/linkedin-128.png" border="0" alt="LinkedIn" /> My LinkedIn</a></li>
                     <li><a href="https://github.com/{{ GITHUB_USERNAME }}" target="_blank" class="about-body-link" link="my-github-profile"><img src="{{ SITEURL }}/theme/images/github-128.png" border="0" alt="Github" /> My GitHub</a></li>
+                    <li><a href="/feeds/atom.xml" target="_blank" class="about-body-link" link="blog-rss"><img src="{{ SITEURL }}/theme/images/rss-128.png" border="0" alt="Atom" /> Atom Feed</a></li>
+                    <li><a href="/feeds/rss.xml" target="_blank" class="about-body-link" link="blog-rss"><img src="{{ SITEURL }}/theme/images/rss-128.png" border="0" alt="RSS" /> RSS Feed</a></li>
                 </ul>
             </div>
         </section>
