--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -15,6 +15,9 @@
     {% if FEED_RSS %}
     <link href="{{ FEED_DOMAIN }}/{{ FEED_RSS }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
     {% endif %}
+    {% if not RELATIVE_URLS %}
+    {% include 'google_analytics.html' %}
+    {% endif %}
     {% endblock head %}
 </head>
 <body id="index" class="home">
