Add cloud function for streaming GA events

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -15,7 +15,7 @@
     {% if FEED_RSS %}
     <link href="{{ FEED_DOMAIN }}/{{ FEED_RSS }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
     {% endif %}
-    {% if not RELATIVE_URLS %}
+    {% if ENV == 'prod' %}
     {% include 'google_analytics.html' %}
     {% endif %}
     {% endblock head %}
