--- a/theme/static/css/_base.scss
+++ b/theme/static/css/_base.scss
@@ -46,8 +46,9 @@ pre {
 table.pretty {
 
   margin-top: 10px;
-  margin-left:auto;
-  margin-right:auto;
+  margin-bottom: 10px;
+  #margin-left:auto;
+  #margin-right:auto;
 
   tr {
     border-top: 1px solid #cccccc;
